--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-router": "^7.9.3",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
