--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,12 +16,14 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-router": "^7.9.3",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
