--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.6",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.8"
   },
